@@ -238,7 +238,7 @@ enum job_states {
 #define JOB_REQUEUE_FED   0x00100000 /* Job is being requeued by federation */
 #define JOB_RESV_DEL_HOLD 0x00200000 /* Job is hold */
 #define JOB_SIGNALING     0x00400000 /* Outgoing signal is pending */
-
+#define JOB_STAGE_OUT     0x00800000 /* Staging out data (burst buffer) */
 
 #define READY_JOB_FATAL	   -2	/* fatal error */
 #define READY_JOB_ERROR    -1	/* ordinary error */
