@@ -56,6 +56,8 @@ documents those changes that are of interest to users and administrators.
     multi-prog option.
  -- Report NodeFeatures plugin configuration with scontrol and sview commands.
  -- Add acct_gather_profile/influxdb plugin.
+ -- Add new job state of SO/STAGE_OUT indicating that burst buffer stage-out
+    operation is in progress.
 
 * Changes in Slurm 17.11.3
 ==========================
